2004-11-30  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c (signal_handler): Move message to after check for alarm

2004-11-25  Michael Gogins <gogins@pipeline.com>

	* Initial implementation of CounterpointNode -- 
	generates species 1, 2, or 3 counterpoint for cantus firmi
	selected from notes generated by child nodes.
	Based on code from Bill Schottstaedt's species counterpoint generator
	(thanks, Bill!).

	* Optimized the build for boost::ublas matrix code 
	in CsoundVST Node classes.

2004-11-28  John ffitch  <jpff@codemist.co.uk>

	* OOps/pvfileio.c (write_pvocdata, pvoc_readfmt): Use a union
	rather than dubious casts.

2004-11-23  John ffitch  <jpff@codemist.co.uk>

	* OOps/midirecv.c (m_chanmsg): Removed initial values for
	volume/balance/pan/expressions/bend/mastvol 

2004-11-16  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (itable, itabli, itabl3): Need to check OK rather
	than assume true=OK

	* Engine/fgens.c: All over removed statics into the environment or
	into arguments.  Make ftfind etc take extra argument.  Should
	assist with reentrance.

2004-11-14  John ffitch  <jpff@codemist.co.uk>

	* util2/exports/het_import.c (main): Open output as binary stream

	* Top/main.c (mainRESET): ftRESET takes environment argument

	* Engine/fgens.c: Move many statics into a single static.  Adjust
	args to gens to reflect this -- statics almost unnecessary

2004-11-11  Michael Gogins <gogins@pipeline.com>

	* Changed the Python interface to CsoundVST to allow Python
	programmers to derive new classes in Python from CsoundVST.Node,
	and these new classes will function as C++ Node * objects in the
	CsoundVST C++ internals. This enables Python-derived Nodes to
	function just like regular C++ Nodes in music graphs. 

2004-11-11  John ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c: Removed static variables ftp and nargs and used
	arguments instead.  Simplifications all over

2004-11-10  John ffitch  <jpff@codemist.co.uk>

	* H/csdl.h (FLINKAGE): defined
