@@ -1,3 +1,7 @@
+2004-12-02  John ffitch  <jpff@codemist.co.uk>
+
+	* SConstruct (else): Added PortMIDI build option to aid experimensta
+
 2004-11-30  John ffitch  <jpff@codemist.co.uk>
 
 	* Top/main.c (signal_handler): Move message to after check for alarm
